# circuit_detective

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  phase1_grpo.py  pyproject.toml
artifacts/phase1_pilot_100/: phase1_eval_metrics.json
artifacts/phase1_sft64_grpo200_a10g_large/: phase1_eval_metrics.json
artifacts/phase1_sft_grpo_150_a10g_large/: phase1_eval_metrics.json
artifacts/phase1_sft_grpo_75_a10g_large/: phase1_eval_metrics.json
artifacts/phase1_shaped_smoke_20b/: phase1_eval_metrics.json
artifacts/phase1_submit_tuned_150/: phase1_eval_metrics.json
artifacts/phase1_submit_tuned_50/: phase1_eval_metrics.json
artifacts/phase2_ablation_required_grpo120_a10g_large/: phase1_eval_metrics.json
artifacts/phase2_calibrated_sft96_grpo100_a10g_large/: phase1_eval_metrics.json
artifacts/phase2_strict_sft64_grpo160_a10g_large/: phase1_eval_metrics.json
docs/: ARCHITECTURE.md  circuit_detective_brief.md  log.md  phase_plan.md  writeup.md
notebooks/: phase1_qwen35_2b_grpo.ipynb
scripts/: analyze_phase1_run.py  fetch_hf_run_artifacts.py  hf_cuda_probe.py  hf_phase1_job.py  make_plots.py  phase1_sft.py  phase1_train.py  real_ioi_smoke.py  smoke_rollout.py  validator_smoke.py
server/: Dockerfile  __init__.py  app.py  backend.py  circuit_detective_environment.py  demo.py  ioi_worker.py  probes.py  requirements.txt  rewards.py  tlens_worker.py
tests/: test_analyze_phase1_run.py  test_demo.py  test_environment.py  test_phase1_grpo.py  test_phase1_sft.py
(+2 files in other folders)
